// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <div
    className="display-flex-row big-spacer-bottom"
  >
    <div>
      <img
        alt=""
        className="big-spacer-right"
        src="/images/tutorials/commit.svg"
        width={30}
      />
    </div>
    <div>
      <p
        className="little-spacer-bottom"
      >
        <strong>
          onboarding.tutorial.with.azure_pipelines.SaveAndRun.commit
        </strong>
      </p>
      <p>
        onboarding.tutorial.with.azure_pipelines.SaveAndRun.commit.why
         
      </p>
    </div>
  </div>
  <div
    className="display-flex-row"
  >
    <div>
      <img
        alt=""
        className="big-spacer-right"
        src="/images/tutorials/refresh.svg"
        width={30}
      />
    </div>
    <div>
      <p
        className="little-spacer-bottom"
      >
        <strong>
          onboarding.tutorial.with.azure_pipelines.SaveAndRun.refresh
        </strong>
      </p>
      <p>
        onboarding.tutorial.with.azure_pipelines.SaveAndRun.refresh.why
      </p>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: with branches and alm info 1`] = `
<Fragment>
  <div
    className="display-flex-row big-spacer-bottom"
  >
    <div>
      <img
        alt=""
        className="big-spacer-right"
        src="/images/tutorials/commit.svg"
        width={30}
      />
    </div>
    <div>
      <p
        className="little-spacer-bottom"
      >
        <strong>
          onboarding.tutorial.with.azure_pipelines.SaveAndRun.commit
        </strong>
      </p>
      <p>
        onboarding.tutorial.with.azure_pipelines.SaveAndRun.commit.why
         
        onboarding.tutorial.with.azure_pipelines.SaveAndRun.commit.pr_deco.alm.azure
      </p>
    </div>
  </div>
  <div
    className="display-flex-row"
  >
    <div>
      <img
        alt=""
        className="big-spacer-right"
        src="/images/tutorials/refresh.svg"
        width={30}
      />
    </div>
    <div>
      <p
        className="little-spacer-bottom"
      >
        <strong>
          onboarding.tutorial.with.azure_pipelines.SaveAndRun.refresh
        </strong>
      </p>
      <p>
        onboarding.tutorial.with.azure_pipelines.SaveAndRun.refresh.why
      </p>
    </div>
  </div>
</Fragment>
`;
